--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/ScheduleBell/v16/Server/sqlite3/db.lock
+/.vs/ScheduleBell/v16/Server/sqlite3/storage.ide
+/.vs/ScheduleBell/v16/Server/sqlite3/storage.ide-shm
+/.vs/ScheduleBell/v16/Server/sqlite3/storage.ide-wal
